fix page not centered on ios

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,8 @@
 
 
 .App {
-  margin-right: -$scrollbar-width;
+  width: 100vw;
+  left:0;
 }
 
 .section {
